--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ body{
 
 <div class="gallery" id="gallery"></div>
 
-<audio id="music" autoplay loop>
+<audio id="music" loop>
   <source src="https://cdn.pixabay.com/audio/2022/02/23/audio_d1718f2f63.mp3" type="audio/mpeg">
 </audio>
 
@@ -261,4 +261,5 @@ function showFinal(){
 </script>
 </body>
 </html>
+
 
