--- a/index.html
+++ b/index.html
@@ -31,14 +31,18 @@ body{
 
 /* ENVELOPPE */
 .envelope{
-  width:300px;
-  height:200px;
+  width:420px;
+  height:300px;
   background:white;
   position:relative;
   cursor:pointer;
-  border-radius:10px;
+  border-radius:15px;
   opacity:0;
   transition:1s;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  overflow:hidden;
 }
 .flap{
   position:absolute;
@@ -57,14 +61,19 @@ body{
 .message{
   position:absolute;
   top:50%;
-  transform:translateY(-50%);
-  width:100%;
-  padding:20px;
+  left:50%;
+  transform:translate(-50%,-50%);
+  width:80%;
+  max-height:70%;
+  padding:10px;
   color:#ff4d6d;
   font-family:'Great Vibes',cursive;
-  font-size:28px;
+  font-size:32px;
+  text-align:center;
   opacity:0;
   transition:1s;
+  overflow:auto;
+  word-wrap:break-word;
 }
 .open .message{
   opacity:1;
@@ -198,6 +207,8 @@ body{
 
 <script>
 
+let envelopeOpened = false;
+
 /* MUSIQUE */
 let musicStarted = false;
 const music = document.getElementById("music");
@@ -234,11 +245,16 @@ function typeWriter(text,element,i=0){
 }
 
 function openEnvelope(e){
+
+  if(envelopeOpened) return; // bloque les clics suivants
+  envelopeOpened = true;
+
   e.stopPropagation();
   startMusic();
 
   const env=document.querySelector(".envelope");
   env.classList.add("open");
+  env.style.cursor="default";
 
   typeWriter(text,document.getElementById("typedText"));
 }
@@ -247,7 +263,14 @@ function openEnvelope(e){
 const images=[
   "photo1.jpg",
   "photo2.jpg",
-  "photo3.jpg"
+  "photo3.jpg",
+  "photo4.jpg",
+  "photo5.jpg",
+  "photo6.jpg",
+  "photo7.jpg",
+  "photo8.jpg",
+  "photo9.jpg",
+  "photo10.jpg"
 ];
 
 function showGallery(){
@@ -344,6 +367,7 @@ window.addEventListener("load",()=>{
 </script>
 </body>
 </html>
+
 
 
 
