--- a/index.html
+++ b/index.html
@@ -96,20 +96,6 @@ body{
   transition:1s;
 }
 
-.polaroid{
-  background:white;
-  padding:10px 10px 40px 10px;
-  border-radius:10px;
-  position:absolute;
-  transform:rotate(-10deg);
-  animation:drop 1.5s ease forwards;
-}
-
-.polaroid img{
-  max-width:300px;
-  border-radius:8px;
-}
-
 @keyframes drop{
   from{transform:translateY(-300px) rotate(-20deg);opacity:0;}
   to{transform:translateY(0) rotate(0);opacity:1;}
@@ -184,7 +170,7 @@ body{
   to{opacity:0;pointer-events:none;}
 }
 
-/* ================= FILM STRIPS ================= */
+/* ================= FILM STRIPS FIX ================= */
 
 .filmContainer{
   position:fixed;
@@ -198,18 +184,21 @@ body{
   overflow:hidden;
 }
 
-.filmStrip{
+.stripWrapper{
   width:120px;
+  overflow:hidden;
+}
+
+.filmStrip{
+  width:100%;
   background:black;
   display:flex;
   flex-direction:column;
   align-items:center;
   gap:20px;
   padding:20px 0;
-  animation-duration:12s;
-  animation-timing-function:linear;
-  animation-iteration-count:infinite;
   opacity:0.9;
+  animation:scroll 12s linear infinite;
 }
 
 .filmStrip img{
@@ -218,7 +207,14 @@ body{
   border:4px solid #222;
 }
 
-/* Mouvement vertical */
+/* Animation alternée */
+.scrollDown{
+  animation-name:scrollDown;
+}
+
+.scrollUp{
+  animation-name:scrollUp;
+}
 
 @keyframes scrollDown{
   from{transform:translateY(-50%);}
@@ -230,13 +226,12 @@ body{
   to{transform:translateY(-50%);}
 }
 
-/* Animation arrivée depuis côtés */
-
-.slideLeft{
+/* Entrée latérale */
+.enterLeft{
   animation:enterLeft 1.5s ease forwards;
 }
 
-.slideRight{
+.enterRight{
   animation:enterRight 1.5s ease forwards;
 }
 
@@ -250,8 +245,7 @@ body{
   to{transform:translateX(0);}
 }
 
-/* Assombrissement centre */
-
+/* Overlay centre */
 .centerOverlay{
   position:absolute;
   top:0;
@@ -263,8 +257,7 @@ body{
   backdrop-filter:blur(3px);
 }
 
-/* TEXTE FINAL AU DESSUS */
-
+/* Texte final */
 .finalMessage{
   position:absolute;
   top:50%;
@@ -369,60 +362,6 @@ const images=[
   "photo10.jpg"
 ];
 
-function showGallery(){
-  const gallery=document.getElementById("gallery");
-  gallery.style.opacity=1;
-  gallery.style.pointerEvents="all";
-
-  let index=0;
-
-  function showNext(){
-    if(index>=images.length){
-      setTimeout(showFinal,1500);
-      return;
-    }
-
-    const pol=document.createElement("div");
-    pol.className="polaroid";
-
-    // Position random
-    function randomPositionAvoidCenter(){
-
-      let x,y;
-      const centerXmin = 35;
-      const centerXmax = 65;
-      const centerYmin = 30;
-      const centerYmax = 70;
-    
-      do{
-        x = Math.random()*90;
-        y = Math.random()*80;
-      }while(
-        x > centerXmin && x < centerXmax &&
-        y > centerYmin && y < centerYmax
-      );
-    
-      return {x,y};
-    }
-
-    const pos = randomPositionAvoidCenter();
-    pol.style.left = pos.x + "vw";
-    pol.style.top = pos.y + "vh";
-
-    // Rotation random
-    const rotate = Math.random()*40 - 20;
-    pol.style.transform = `rotate(${rotate}deg)`;
-
-    pol.innerHTML=`<img src="${images[index]}">`;
-
-    gallery.appendChild(pol);
-
-    index++;
-    setTimeout(showNext,800);
-  }
-
-  showNext();
-}
 
 
 /* FEU D'ARTIFICE + MESSAGE FINAL */
@@ -434,34 +373,34 @@ function showFinal(){
 
   const gallery=document.getElementById("gallery");
   gallery.style.opacity=1;
-  gallery.style.pointerEvents="none";
 
   const container=document.createElement("div");
   container.className="filmContainer";
 
-  const totalStrips=8; // nombre de colonnes
+  const totalStrips=8;
 
   for(let i=0;i<totalStrips;i++){
+
+    const wrapper=document.createElement("div");
+    wrapper.className="stripWrapper";
+
+    if(i < totalStrips/2){
+      wrapper.classList.add("enterLeft");
+    }else{
+      wrapper.classList.add("enterRight");
+    }
 
     const strip=document.createElement("div");
     strip.className="filmStrip";
 
-    // Animation verticale alternée
     if(i%2===0){
-      strip.style.animationName="scrollDown";
+      strip.classList.add("scrollDown");
     }else{
-      strip.style.animationName="scrollUp";
+      strip.classList.add("scrollUp");
     }
 
-    // Entrée depuis côtés
-    if(i < totalStrips/2){
-      strip.classList.add("slideLeft");
-    }else{
-      strip.classList.add("slideRight");
-    }
-
-    // Ajouter photos répétées
-    for(let r=0;r<6;r++){
+    // Doubler les images pour boucle fluide
+    for(let r=0;r<8;r++){
       images.forEach(src=>{
         const img=document.createElement("img");
         img.src=src;
@@ -469,7 +408,8 @@ function showFinal(){
       });
     }
 
-    container.appendChild(strip);
+    wrapper.appendChild(strip);
+    container.appendChild(wrapper);
   }
 
   gallery.appendChild(container);
@@ -479,7 +419,7 @@ function showFinal(){
   overlay.className="centerOverlay";
   gallery.appendChild(overlay);
 
-  // Texte final au-dessus
+  // Texte final
   const final=document.createElement("div");
   final.className="finalMessage";
   final.innerHTML="Je t’aime plus que tout ❤️";
@@ -488,8 +428,37 @@ function showFinal(){
   setTimeout(()=>{
     final.style.opacity=1;
   },1500);
+
+  // 🎆 Feux d'artifice colorés
+  for(let i=0;i<30;i++){
+    setTimeout(()=>{
+      createFirework();
+    }, i*150);
+  }
 }
 
+/* ================= FEUX D'ARTIFICE FIX ================= */
+
+function createFirework(){
+  const fw=document.createElement("div");
+  fw.style.position="absolute";
+  fw.style.left=Math.random()*100+"vw";
+  fw.style.top=Math.random()*100+"vh";
+  fw.style.width="8px";
+  fw.style.height="8px";
+  fw.style.borderRadius="50%";
+  fw.style.background=`hsl(${Math.random()*360},100%,60%)`;
+  fw.style.zIndex="5";
+  fw.style.animation="explode 1s ease-out forwards";
+  document.body.appendChild(fw);
+
+  setTimeout(()=>fw.remove(),1000);
+}
+
+@keyframes explode{
+  from{transform:scale(1);opacity:1;}
+  to{transform:scale(20);opacity:0;}
+}
 
 /* ================= INTRO TRANSITION ================= */
 
@@ -503,4 +472,5 @@ window.addEventListener("load",()=>{
 </script>
 </body>
 </html>
+
 
