--- a/index.html
+++ b/index.html
@@ -88,9 +88,6 @@ body{
   opacity:0;
   transition:1s;
   overflow:hidden;
-  box-shadow:0 20px 40px rgba(0,0,0,0.25);
-  perspective:1000px;
-  transform-style:preserve-3d;
 }
 
 .flap{
@@ -100,12 +97,10 @@ body{
   background:#ff4d6d;
   clip-path:polygon(0 0,100% 0,50% 50%);
   transition:1s;
-  transform-origin:top;
-  backface-visibility:hidden;
 }
 
 .open .flap{
-  transform:rotateX(-180deg);
+  transform:rotateX(180deg);
   transform-origin:top;
 }
 
@@ -124,28 +119,42 @@ body{
   line-height:1.6;
   white-space:pre-line;
   overflow:auto;
-  background:linear-gradient(to bottom,#fffafc,#ffe6ec);
-  border-radius:10px;
-  box-shadow:0 10px 25px rgba(0,0,0,0.15);
 }
 
 .open .message{
   opacity:1;
 }
 
-/*__Signature message enveloppe__*/
-.signature{
-  font-family:'Great Vibes',cursive;
-  font-size:1.2em;
+
+/* LETTRE */
+.letter{
+  position:absolute;
+  width:650px;
+  height:500px;
+  background:#fffdf8;
+  border-radius:10px;
+  box-shadow:0 15px 40px rgba(0,0,0,0.3);
+  padding:50px;
+  box-sizing:border-box;
   opacity:0;
-  display:block;
-  margin-top:10px;
-  animation:fadeSignature 2s ease forwards;
+  transform:translateY(50px) scale(0.9);
+  transition:1s;
+  z-index:2;
 }
 
-@keyframes fadeSignature{
-  to{opacity:1;}
+.letter.show{
+  opacity:1;
+  transform:translateY(-40px) scale(1);
 }
+
+.letterText{
+  font-family:'Great Vibes',cursive;
+  font-size:30px;
+  color:#b3003c;
+  line-height:1.7;
+  white-space:pre-line;
+}
+
 
 /* ================= FILM STRIPS ================= */
 
@@ -272,6 +281,18 @@ body{
   <div class="message" id="typedText"></div>
 </div>
 
+<div class="letter" id="letter">
+  <div class="letterText" id="typedText"></div>
+</div>
+
+<div id="reminder" style="position:absolute;left:5%;top:50%;transform:translateY(-50%);opacity:0;transition:1s;z-index:6;text-align:center;">
+  <img src="https://cdn3d.iconscout.com/3d/premium/thumb/emoji-desole-tenant-un-bouquet-de-fleurs-3d-icon-png-download-12247331.png?f=webp" width="180">
+  <div style="font-family:'Poppins';margin-top:15px;color:white;">
+    Clique encore sur l'enveloppe 🥺
+  </div>
+</div>
+
+
 <div class="gallery" id="gallery"></div>
 
 <!-- 🎵 MUSIQUE -->
@@ -284,6 +305,9 @@ body{
 let envelopeOpened=false;
 let envelopeClickCount = 0;
 let musicStarted=false;
+let typingFinished = false;
+let reminderTimeout;
+
 const music=document.getElementById("music");
 
 /* GALERIE */
@@ -294,10 +318,7 @@ const images=[
   "photo4.jpg",
   "photo5.jpg",
   "photo6.jpg",
-  "photo7.jpg",
-  "photo8.jpg",
-  "photo9.jpg",
-  "photo10.jpg"
+  "photo7.jpg"
 ];
 
 /* 💕 COEURS FLOTANTS */
@@ -351,10 +372,14 @@ function typeWriter(text,el,i=0){
     el.innerHTML+=text.charAt(i);
     setTimeout(()=>typeWriter(text,el,i+1),35);
   }else{
-    el.innerHTML = el.innerHTML.replace(
-      "---SIGNATURE---",
-      "<br><span class='signature'>Sincèrement à toi,</span><br>"
-    );
+    typingFinished = true;
+
+    // Après 8 secondes si pas de clic → afficher rappel
+    reminderTimeout = setTimeout(()=>{
+      if(envelopeClickCount < 2){
+        document.getElementById("reminder").style.opacity = 1;
+      }
+    },8000);
   }
 }
 
@@ -369,11 +394,17 @@ function openEnvelope(e){
     startMusic();
     const env=document.querySelector(".envelope");
     env.classList.add("open");
+
+    const letter=document.getElementById("letter");
+    setTimeout(()=>letter.classList.add("show"),600);
+    
     typeWriter(text, document.getElementById("typedText"));
   }
 
   // Deuxième clic → lancer la surprise finale
-  else if(envelopeClickCount === 2){
+  else if(envelopeClickCount === 2 && typingFinished){
+    clearTimeout(reminderTimeout);
+    document.getElementById("reminder").style.opacity = 0;
     showFinal();
   }
 }
